container: updated motus2.6 container

--- a/Singularity.motus2.6
+++ b/Singularity.motus2.6
@@ -49,7 +49,7 @@ export PATH=$PATH:/opt/software/miniconda3/bin:/opt/software/mOTUs:/opt/software
 
   # install what you can via conda
   # /opt/software/miniconda3/bin/conda install -y -c conda-forge -c bioconda hmmer 'samtools>=1.13' bwa kraken2 'gatk4==4.1.6.0-0' fastqc multiqc bbmap seqtk
-  /opt/software/miniconda3/bin/conda install -y -c conda-forge -c bioconda samtools bwa 'motus=2.6'
+  /opt/software/miniconda3/bin/conda install -y -c conda-forge -c bioconda samtools bwa 'motus=2.6' 'python=3.9'
   
   # read_counter installation
   # cd /opt/software
